tests/samples/negative/generics/generic_function_type_args_on_plain.ax
module generic_function_type_args_on_plain;

fn plain(value: i32) -> i32 {
    return value;
}

fn main() -> i32 {
    return plain<i32>(1);
}
